--- a/firebase.json
+++ b/firebase.json
@@ -4,9 +4,8 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"],
+    "source": "functions"
   },
   "emulators": {
     "functions": {
@@ -18,5 +17,9 @@
     "ui": {
       "enabled": true
     }
+  },
+  "hosting": {
+    "public": "public",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
