--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,7 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1",
-    "swagger-jsdoc": "^4.0.0",
-    "swagger-ui-express": "^4.1.4"
+    "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
